# libxkcd

./: .gitmodules  .lgtm.yml  .travis.yml  Dockerfile  README.md  meson.build
include/: xkcd.h
src/: dynamic_buffer.c  dynamic_buffer.h  meson.build  optional.c  optional.h  xkcd.c  xkcd_private.h
tests/: compiling_png.h  meson.build  test_dynamic_buffer.c  test_xkcd.c
